--- a/www/kerbit/client/main.html
+++ b/www/kerbit/client/main.html
@@ -1,13 +1,128 @@
 <head>
-  <title>reactive-maps-example</title>
+  <title>KERB.IT</title>
+  <script src="https://use.fontawesome.com/658eff4761.js"></script>
+  <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
-  {{> map}}
+
+    <!-- Navigation -->
+    <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
+        <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand page-scroll" href="#page-top"><strong>KERB.IT</strong></a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a class="page-scroll" href="#about">About</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#services">Services</a>
+                    </li>
+                    <li>
+                        <p class="navbar-btn">
+                            <a href="#" class="btn btn-default">Log-in</a>
+                        </p>
+                    </li>
+                    <li>
+                        <p class="navbar-btn">
+                            <a href="#" class="btn btn-default btn-f35b68">Sign-up</a>
+                        </p>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container-fluid -->
+    </nav>
+
+  <!-- {{> map}} -->
+
+    <div class="intro-header">
+        <div class="container">
+
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="intro-message">
+                        <h1>KERB.IT</h1>
+                        <h3>Definitely not a template</h3>
+                        <hr class="intro-divider">
+                        <div class="row">
+                        	<div class="col-md-4 col-md-offset-4">
+                        		<a href="#" class="btn btn-default btn-block"><span class="lead"><i class="fa fa-truck fa-fw"></i> GET STARTED</span></a>
+                        	</div>
+                        </div>
+                        
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        <!-- /.container -->
+
+    </div>
+    <!-- /.intro-header -->
+
+    <div class="container">
+
+    	<!-- START THE FEATURETTES -->
+    	<hr class="featurette-divider">
+
+    	<div class="row featurette">
+    	  <div class="col-md-7">
+    	    <h2 class="featurette-heading">Tom is a lazy fuck <span class="text-muted">Mind blown</span></h2>
+    	    <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+    	  </div>
+    	  <div class="col-md-5">
+    	    <img class="featurette-image img-responsive center-block" src="http://placehold.it/500x500" alt="Generic placeholder image">
+    	  </div>
+    	</div>
+
+    	<hr class="featurette-divider">
+
+    	<div class="row featurette">
+    	  <div class="col-md-7 col-md-push-5">
+    	    <h2 class="featurette-heading">Oh yeah, it's true <span class="text-muted">See for yourself</span></h2>
+    	    <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+    	  </div>
+    	  <div class="col-md-5 col-md-pull-7">
+    	    <img class="featurette-image img-responsive center-block" src="http://placehold.it/500x500" alt="Generic placeholder image">
+    	  </div>
+    	</div>
+
+    	<hr class="featurette-divider">
+
+    	<div class="row featurette">
+    	  <div class="col-md-7">
+    	    <h2 class="featurette-heading">And lastly, fuck y'all. <span class="text-muted">Checkmate</span></h2>
+    	    <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+    	  </div>
+    	  <div class="col-md-5">
+    	    <img class="featurette-image img-responsive center-block" src="http://placehold.it/500x500" alt="Generic placeholder image">
+    	  </div>
+    	</div>
+
+    	<hr class="featurette-divider">
+    	<!-- /END THE FEATURETTES -->
+    </div>
+
 </body>
+<!--
 
 <template name="map">
   <div class="map-container">
     {{> googleMap name="map" options=mapOptions}}
   </div>
 </template>
+
+-->
