[PB] Style changes, ready for template extraction

--- a/www/kerbit/client/main.html
+++ b/www/kerbit/client/main.html
@@ -17,7 +17,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top"><strong>KERB.IT</strong></a>
+                <a class="navbar-brand page-scroll" href="#page-top">KERB.IT</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -55,11 +55,11 @@
                 <div class="col-md-12">
                     <div class="intro-message">
                         <h1>KERB.IT</h1>
-                        <h3>Definitely not a template</h3>
+                        <h3>Coming soon</h3>
                         <hr class="intro-divider">
                         <div class="row">
                         	<div class="col-md-4 col-md-offset-4">
-                        		<a href="#" class="btn btn-default btn-block"><span class="lead"><i class="fa fa-truck fa-fw"></i> GET STARTED</span></a>
+                        		<a href="#" class="btn btn-default btn-block"><span class="lead"><i class="fa fa-recycle fa-fw"></i> GET STARTED</span></a>
                         	</div>
                         </div>
                         
@@ -80,8 +80,10 @@
 
     	<div class="row featurette">
     	  <div class="col-md-7">
-    	    <h2 class="featurette-heading">Tom is a lazy fuck <span class="text-muted">Mind blown</span></h2>
-    	    <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+    	    <h2 class="featurette-heading">Testing featurette... <span class="text-muted">Ok</span></h2>
+    	    <p class="lead">Placehold.it m8 - Placehold.it m8 - Placehold.it m8 - Placehold.it m8 - Placehold.it m8 - Placehold.it m8
+    	    Placehold.it m8 - Placehold.it m8 - Placehold.it m8 - Placehold.it m8 - Placehold.it m8 - Placehold.it m8
+    	    Placehold.it m8 - Placehold.it m8 - Placehold.it m8 - Placehold.it m8 - Placehold.it m8 - Placehold.it m8</p>
     	  </div>
     	  <div class="col-md-5">
     	    <img class="featurette-image img-responsive center-block" src="http://placehold.it/500x500" alt="Generic placeholder image">
@@ -92,8 +94,10 @@
 
     	<div class="row featurette">
     	  <div class="col-md-7 col-md-push-5">
-    	    <h2 class="featurette-heading">Oh yeah, it's true <span class="text-muted">See for yourself</span></h2>
-    	    <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+    	    <h2 class="featurette-heading">Testing featurette... <span class="text-muted">Ok</span></h2>
+    	    <p class="lead">Placehold.it m8 - Placehold.it m8 - Placehold.it m8 - Placehold.it m8 - Placehold.it m8 - Placehold.it m8
+    	    Placehold.it m8 - Placehold.it m8 - Placehold.it m8 - Placehold.it m8 - Placehold.it m8 - Placehold.it m8
+    	    Placehold.it m8 - Placehold.it m8 - Placehold.it m8 - Placehold.it m8 - Placehold.it m8 - Placehold.it m8</p>
     	  </div>
     	  <div class="col-md-5 col-md-pull-7">
     	    <img class="featurette-image img-responsive center-block" src="http://placehold.it/500x500" alt="Generic placeholder image">
@@ -104,8 +108,10 @@
 
     	<div class="row featurette">
     	  <div class="col-md-7">
-    	    <h2 class="featurette-heading">And lastly, fuck y'all. <span class="text-muted">Checkmate</span></h2>
-    	    <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+    	    <h2 class="featurette-heading">Testing featurette... <span class="text-muted">Ok</span></h2>
+    	    <p class="lead">Placehold.it m8 - Placehold.it m8 - Placehold.it m8 - Placehold.it m8 - Placehold.it m8 - Placehold.it m8
+    	    Placehold.it m8 - Placehold.it m8 - Placehold.it m8 - Placehold.it m8 - Placehold.it m8 - Placehold.it m8
+    	    Placehold.it m8 - Placehold.it m8 - Placehold.it m8 - Placehold.it m8 - Placehold.it m8 - Placehold.it m8</p>
     	  </div>
     	  <div class="col-md-5">
     	    <img class="featurette-image img-responsive center-block" src="http://placehold.it/500x500" alt="Generic placeholder image">
