--- a/www/kerbit/client/main.html
+++ b/www/kerbit/client/main.html
@@ -2,6 +2,7 @@
   <title>KERB.IT</title>
   <script src="https://use.fontawesome.com/658eff4761.js"></script>
   <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+  <link rel="shortcut icon" href="/test/van.ico">
 </head>
 
 <body>
@@ -17,7 +18,9 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">KERB.IT</a>
+                <!-- <a href="#" class="pull-left"><img src="/path/to/image.png"></a> -->
+
+                <a class="navbar-brand page-scroll" href="#page-top"><i class="fa fa-truck fa-fw"></i> | KERB.IT</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -59,7 +62,7 @@
                         <hr class="intro-divider">
                         <div class="row">
                         	<div class="col-md-4 col-md-offset-4">
-                        		<a href="#" class="btn btn-default btn-block"><span class="lead"><i class="fa fa-recycle fa-fw"></i> GET STARTED</span></a>
+                        		<a href="#" class="btn btn-default btn-block" onclick="hoho()"><span class="lead"><i class="fa fa-recycle fa-fw"></i> GET STARTED</span></a>
                         	</div>
                         </div>
                         
@@ -121,6 +124,11 @@
     	<hr class="featurette-divider">
     	<!-- /END THE FEATURETTES -->
     </div>
+    <script>
+    	function hoho() {
+    	    alert("Or don't");
+    	}
+    </script>
 
 </body>
 <!--
