made home button work

--- a/www/kerbit/client/ui/header.html
+++ b/www/kerbit/client/ui/header.html
@@ -22,7 +22,7 @@
                 </button>
                 <!-- <a href="#" class="pull-left"><img src="/path/to/image.png"></a> -->
 
-                <a class="navbar-brand page-scroll" href="#page-top"><i class="fa fa-truck fa-fw"></i> | KERB.IT</a>
+                <a class="navbar-brand page-scroll" href="/"><i class="fa fa-truck fa-fw"></i> | KERB.IT</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
