--- a/www/kerbit/client/main.html
+++ b/www/kerbit/client/main.html
@@ -93,15 +93,8 @@
     {{>page_header}}
     {{>nav_bar}}
     {{> yield}}
-    <hr />
-
-    <p>Copyright &copy; KerbIT, 2015-2016.</p>
+    {{>footer}}
 </template>
-
-
-
-
-
 
 <!--
 
