[PB] Fixed typo

--- a/www/kerbit/client/register.html
+++ b/www/kerbit/client/register.html
@@ -14,7 +14,7 @@
                     <div class="panel panel-default">
                         <div class="panel-body">
                             <div class="form-group">
-                                <input type="email" class="form-control" id="user_id" name="user_id" placeholder="Username" required>
+                                <input type="text" class="form-control" id="user_id" name="user_id" placeholder="Username" required>
                             </div>
                             <div class="form-group">
                                 <input type="password" class="form-control" id="password_id" name="password_id" placeholder="Password" required>
