Enabled user registration and login

--- a/www/kerbit/imports/ui/pages/register.html
+++ b/www/kerbit/imports/ui/pages/register.html
@@ -1,92 +1,8 @@
 <template name="register">
-    {{>page_header}}
 
-    <body class="body-padded50">
 
-    {{>nav_bar}}
 
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6">
-                <form role="form" name="client">
-                    <div class="page-header">
-                        <h1>Clients</h1>
-                    </div>
-                    <div class="panel panel-default">
-                        <div class="panel-body">
-                            <div class="form-group">
-                                <input type="text" class="form-control" id="client_user_id" name="client_user_id" placeholder="Username">
-                            </div>
-                            <div class="form-group">
-                                <input type="password" class="form-control" id="client_password_id" name="client_password_id" placeholder="Password">
-                            </div>
-                            <div class="form-group">
-                                <input type="text" class="form-control" id="client_firstname_id" name="client_firstname_id" placeholder="First Name">
-                            </div>
-                            <div class="form-group">
-                                <input type="text" class="form-control" id="client_surname_id" name="client_surname_id" placeholder="Surname">
-                            </div>
-                            <div class="form-group">
-                                <input type="email" class="form-control" id="client_email_id" name="client_email_id" placeholder="Email">
-                            </div>
-                            <div class="form-group">
-                                <input type="email" class="form-control" id="client_email_confirm_id" name="client_email_confirm_id" placeholder="Confirm Email">
-                            </div>
-                            <input type="button" id="client_submit" name="client_submit"  value="Submit" class="btn btn-info pull-right" onclick='readText(this.form)'>
-                        </div>
-                    </div> <!-- /PANEL -->
-                </form>
-            </div>
-            <div class="col-md-6">
-                <form role="form">
-                    <div class="page-header">
-                        <h1>Drivers</h1>
-                    </div>
-                    <div class="panel panel-default">
-                        <div class="panel-body">
-                            <div class="form-group">
-                                <input type="text" class="form-control" id="driver_user_id" name="driver_user_id" placeholder="Username" required>
-                            </div>
-                            <div class="form-group">
-                                <input type="password" class="form-control" id="driver_password_id" name="driver_password_id" placeholder="Password" required>
-                            </div>
-                            <div class="form-group">
-                                <input type="text" class="form-control" id="driver_firstname_id" name="driver_firstname_id" placeholder="First Name" required>
-                            </div>
-                            <div class="form-group">
-                                <input type="text" class="form-control" id="driver_surname_id" name="driver_surname_id" placeholder="Surname" required>
-                            </div>
-                            <div class="form-group">
-                                <input type="email" class="form-control" id="driver_email_id" name="driver_email_id" placeholder="Email" required>
-                            </div>
-                            <div class="form-group">
-                                <input type="email" class="form-control" id="driver_email_confirm_id" name="driver_email_confirm_id" placeholder="Confirm Email" required>
-                            </div>
-                            <input type="button" id="driver_submit" name="driver_submit" value="Submit" class="btn btn-info pull-right" onclick="writeText(this.form)">
-                        </div>
-                    </div> <!-- /PANEL -->
-                </form>
-            </div> <!-- /COL-MD-6 -->
-        </div> <!-- /ROW -->
-    </div> <!-- /CONTAINER -->
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <h6>Crippling depression</h6>
-            </div>
-        </div>
-    </div>
 
-    <script>
-        // Testing javascript, ignore
-        function readText (form) {
-            var client_user_id =form.client_user_id.value;
-            alert ("Username: " + client_user_id);
-        }
-        function writeText (form) {
-            form.driver_user_id.value = "Fuck you Tom"
-        }
-    </script>
+{{> atForm state='signUp'}}
 
-    </body>
 </template>
