--- a/www/kerbit/imports/ui/pages/login.html
+++ b/www/kerbit/imports/ui/pages/login.html
@@ -1,10 +1,12 @@
 
 <template name="login">
 
-    {{ > atForm state = login }}
-
-
-
-
+    <div class="container">
+        <div class="row">
+            <div class="vcenter text-center col-md-4 col-md-offset-4">
+                {{ > atForm state = login }}
+            </div>
+        </div>
+    </div>
 
 </template>
