--- a/www/kerbit/imports/ui/pages/login.html
+++ b/www/kerbit/imports/ui/pages/login.html
@@ -1,10 +1,9 @@
-
 <template name="login">
 
     <div class="container">
         <div class="row">
             <div class="vcenter text-center col-md-4 col-md-offset-4">
-                {{ > atForm state = login }}
+                {{> atForm state = 'signIn'}}
             </div>
         </div>
     </div>
