--- a/www/kerbit/imports/ui/pages/register.html
+++ b/www/kerbit/imports/ui/pages/register.html
@@ -1,8 +1,11 @@
 <template name="register">
 
-
-
-
-{{> atForm state='signUp'}}
+    <div class="container">
+        <div class="row">
+            <div class="vcenter text-center col-md-4 col-md-offset-4">
+                {{> atForm state = 'signUp'}}
+            </div>
+        </div>
+    </div>
 
 </template>
