--- a/www/kerbit/imports/ui/pages/home.html
+++ b/www/kerbit/imports/ui/pages/home.html
@@ -13,7 +13,7 @@
                         <hr class="intro-divider">
                         <div class="row">
                             <div class="col-md-4 col-md-offset-4">
-                                <a href="#" class="btn btn-default btn-block"><span class="lead"><i class="fa fa-recycle fa-fw"></i> GET STARTED</span></a>
+                                <a href="/register" class="btn btn-default btn-block"><span class="lead"><i class="fa fa-recycle fa-fw"></i> GET STARTED</span></a>
                             </div>
                         </div>
 
