Scroll correct amount for navigating to infos

--- a/www/kerbit/imports/ui/pages/home.html
+++ b/www/kerbit/imports/ui/pages/home.html
@@ -29,7 +29,7 @@
     <div class="container">
 
         <!-- START THE FEATURETTES -->
-        <hr class="featurette-divider">
+        <hr id="about" class="featurette-divider">
 
         <div class="row featurette">
             <div class="col-md-7">
@@ -51,7 +51,7 @@
             </div>
         </div>
 
-        <hr class="featurette-divider">
+        <hr id="services" class="featurette-divider">
 
         <div class="row featurette">
             <div class="col-md-7 col-md-push-5">
