--- a/www/kerbit/imports/ui/pages/makeOffers.html
+++ b/www/kerbit/imports/ui/pages/makeOffers.html
@@ -26,7 +26,7 @@
             -->
             <div class="form-group">
               <div class="col-md-offset-2 col-md-10">
-                <button type="submit" class="btn btn-default submit-offer">Submit</button>
+                <button type="submit" class="btn btn-default">Submit</button>
               </div>
             </div>
           </form>
