--- a/www/kerbit/imports/ui/pages/myRequests.html
+++ b/www/kerbit/imports/ui/pages/myRequests.html
@@ -6,7 +6,7 @@
           Request: {{_id}}
           {{#each offers _id}}
             <ul>
-              Offer: {{_id}}
+              Offer: {{_id}} <button class='accept-offer'>Accept Offer</button>
             </ul>
           {{/each}}
         </li>
