--- a/www/kerbit/imports/ui/pages/myRequests.html
+++ b/www/kerbit/imports/ui/pages/myRequests.html
@@ -3,7 +3,7 @@
     <div class="row">
       {{#each requests}}
         <li>
-          Request: {{_id}}
+          Request: {{_id}} - {{description}}
           {{#each offers _id}}
             <ul>
               Offer: {{_id}} <button class='accept-offer'>Accept Offer</button>
