--- a/www/kerbit/imports/ui/pages/home.html
+++ b/www/kerbit/imports/ui/pages/home.html
@@ -47,7 +47,7 @@
                 </p>
             </div>
             <div class="col-md-5">
-                <img class="featurette-image img-responsive center-block" src="http://placehold.it/500x500" alt="Generic placeholder image">
+                <img class="featurette-image img-responsive center-block" src="/app_home_mockup.jpeg" alt="Generic placeholder image">
             </div>
         </div>
 
@@ -63,7 +63,7 @@
                 future.</p>
             </div>
             <div class="col-md-5 col-md-pull-7">
-                <img class="featurette-image img-responsive center-block" src="http://placehold.it/500x500" alt="Generic placeholder image">
+                <img class="featurette-image img-responsive center-block" src="/app_offers_mockup.jpeg" alt="Generic placeholder image">
             </div>
         </div>
 
