[PB] Typos corrected

--- a/www/kerbit/imports/ui/pages/home.html
+++ b/www/kerbit/imports/ui/pages/home.html
@@ -35,15 +35,14 @@
             <div class="col-md-7">
                 <h2 class="featurette-heading">About us</h2>
                 <p class="lead">We are a small group of five students dedicated
-                to make garbage disposal more confortable, more environmental,
-                and above all fairer for all parties involved. Today most London
-                councils do not collect non household rubbish, and because of     
-                this London has seen an increase in it's flytipping rate and 
-                people have a had to resort to private contractors to get rid of 
-                their garbage.</p>
-                <p class="lead">Our aim is to empower DIYers, gardeners, and 
+                to making garbage disposal more confortable, more environmentally friendly
+                and above all, fairer for all parties involved. These days, most London
+                councils do not collect non-household waste, causing a massive increase in
+                London's flytipping rate. Thus, people have had to resort to private contractors
+                to get rid of their garbage.</p>
+                <p class="lead">Our aim is to empower DIY-ers, gardeners, and
                 small scale construction operations. We hope that our services
-                will make London a cleaner, and more enjoyable city to live in.
+                will make London a cleaner and more enjoyable city to live in.
                 </p>
             </div>
             <div class="col-md-5">
@@ -56,11 +55,10 @@
         <div class="row featurette">
             <div class="col-md-7 col-md-push-5">
                 <h2 class="featurette-heading">Our services</h2>
-                <p class="lead">We offer a platform to connect people in need of
-                garbage removal and independant garbage removal operations. Our
-                service is accesible through the means of our website and
-                Iphone app, and we hope to enter the Android market in the near
-                future.</p>
+                <p class="lead">We offer an easy-to-use, fast and complete platform to connect people in need of
+                garbage removal and independant garbage removal operations. Our service is accesible through our website
+                and Iphone app, and we hope to enter the Android market in the near future.
+                </p>
             </div>
             <div class="col-md-5 col-md-pull-7">
                 <img class="featurette-image img-responsive center-block" src="/app_offers_mockup.jpeg" alt="Generic placeholder image">
