--- a/www/kerbit/imports/ui/pages/myRequests.html
+++ b/www/kerbit/imports/ui/pages/myRequests.html
@@ -1,9 +1,11 @@
 <template name="myRequests">
+  <div class="text-center h1"> My Requests </div>
   <div class="container">
     <div class="row">
       {{#each requests}}
         <li>
-          Request: {{_id}}
+          Request: {{formatDate date}} - {{formatPostcode postcode}} -
+          {{formatDescription description}}
           {{#each offers _id}}
             <ul>
               Offer: {{_id}} <button class='accept-offer'>Accept Offer</button>
