--- a/www/kerbit/imports/ui/pages/map.html
+++ b/www/kerbit/imports/ui/pages/map.html
@@ -1,5 +1,5 @@
 <template name="map">
-    <div class="map-container">
+    <div id="map-container">
         {{> googleMap name="map" options=mapOptions}}
     </div>
 </template>
