add makeoffers requests. change myoffers template

--- a/www/kerbit/imports/ui/pages/myOffers.html
+++ b/www/kerbit/imports/ui/pages/myOffers.html
@@ -3,10 +3,10 @@
   <div class="row">
     {{#each offers}}
       <li>
-        Offer: {{_id}}
+        Offer: {{title}}
         {{#each requests requestId}}
           <ul>
-            Request: {{_id}}
+            Request: {{title}}
           </ul>
         {{/each}}
       </li>
