--- a/www/kerbit/imports/ui/pages/makeOffers.html
+++ b/www/kerbit/imports/ui/pages/makeOffers.html
@@ -16,14 +16,14 @@
                 <input type="text" class="form-control" name="price" id="price" placeholder="Price">
               </div>
             </div>
-            <!--
-            <div class="form-group">
-              <label for="city" class="col-md-2 control-label">Postcode</label>
-              <div class="col-md-10">
-                <input type="text" class="form-control" id="city" placeholder="Postcode">
-              </div>
+          <div class="col-md-6">
+            <div class="row">
+                    {{#each requests}}
+                      <input type="radio" name="requestId" value="{{_id}}" checked> {{title}}: {{_id}}<br>
+                    {{/each}}
             </div>
-            -->
+          </div>
+
             <div class="form-group">
               <div class="col-md-offset-2 col-md-10">
                 <button type="submit" class="btn btn-default">Submit</button>
