remove id replace with title

--- a/www/kerbit/imports/ui/pages/myOffers.html
+++ b/www/kerbit/imports/ui/pages/myOffers.html
@@ -3,10 +3,9 @@
   <div class="row">
     {{#each offers}}
       <li>
-        Offer: {{title}}
         {{#each requests requestId}}
           <ul>
-            Request: {{title}}
+            Request: {{title}} {{price}}
           </ul>
         {{/each}}
       </li>
