Revert "remov unnecessary list"
This reverts commit 80e63add5ad851920fb77474e616225727b51b8f.

--- a/www/kerbit/imports/ui/pages/myOffers.html
+++ b/www/kerbit/imports/ui/pages/myOffers.html
@@ -2,11 +2,13 @@
 <div class="container">
   <div class="row">
     {{#each offers}}
+      <li>
         {{#each requests requestId}}
           <ul>
-            Request: {{title}} {{offers.price}}
+            Request: {{title}} {{price}}
           </ul>
         {{/each}}
+      </li>
     {{/each}}
   </div>
 </div>
