--- a/www/kerbit/imports/ui/pages/makeOffers.html
+++ b/www/kerbit/imports/ui/pages/makeOffers.html
@@ -18,14 +18,14 @@
             </div>
           <div class="col-md-6">
             <p class="h3 text">Current Requests</p>
-            <div class="row">
+            <div class="row" style="margin-left: 15px">
               {{#each requests}}
                 <input type="radio" name="requestId" value={{_id}}> {{title}}<br>
               {{/each}}
             </div>
           </div>
 
-            <div class="form-group">
+            <div class="form-group" style="margin-top: 150px; margin-right: 350px;">
               <div class="col-md-offset-2 col-md-10">
                 <button type="submit" class="btn btn-default">Submit</button>
               </div>
