Move existing routes to flow router but can not get default accounts routes to work

--- a/www/kerbit/imports/ui/pages/myOffers.html
+++ b/www/kerbit/imports/ui/pages/myOffers.html
@@ -1,15 +1,16 @@
-<template name="myOffers">
-<div class="container">
-  <div class="row">
-    {{#each offers}}
-      <li>
-        {{#each requests requestId}}
-          <ul>
-            Request: {{title}} {{price}}
-          </ul>
-        {{/each}}
-      </li>
-    {{/each}}
+<template name="MyOffers">
+  <div class="text-center h1"> My Offers </div>
+    <div class="container">
+      <div class="row">
+        {{#each offers}}
+          <li>
+            {{#each requests requestId}}
+              <ul>
+                Request: {{title}} {{price}}
+              </ul>
+            {{/each}}
+          </li>
+      {{/each}}
+    </div>
   </div>
-</div>
 </template>
