--- a/www/kerbit/imports/ui/pages/myRequests.html
+++ b/www/kerbit/imports/ui/pages/myRequests.html
@@ -1,4 +1,4 @@
-<template name="myRequests">
+<template name="MyRequests">
   <div class="text-center h1"> My Requests </div>
   <div class="container">
     <div class="row">
