--- a/www/kerbit/imports/ui/pages/requestPickup.html
+++ b/www/kerbit/imports/ui/pages/requestPickup.html
@@ -1,4 +1,4 @@
-<template name="requestPickup">
+<template name="RequestPickup">
 <div class="container">
   <div class="jumbotron">
     <div class="row">
