fixed home button so now it focuses at top whenever pressed on page

--- a/www/kerbit/imports/ui/pages/home.html
+++ b/www/kerbit/imports/ui/pages/home.html
@@ -1,7 +1,7 @@
 <template name="Home">
 
     <!-- {{> map}} -->
-
+    <div id="top"></div>
     <div class="intro-header">
         <div class="container">
 
