--- a/www/kerbit/imports/ui/pages/requestPickup.html
+++ b/www/kerbit/imports/ui/pages/requestPickup.html
@@ -24,13 +24,13 @@
           <div class="form-group">
             <label for="sizeRequired" class="col-md-2 control-label">Size Required</label>
             <div class="col-md-10">
-              <input type="range" id="sizeRequired" value="50">
+              <input type="range" id="sizeRequired" value="5" min="1" max="10">
             </div>
           </div>
           <div class="form-group">
             <label for="bidWindow" class="col-md-2 control-label">Bid Window</label>
             <div class="col-md-10">
-              <input type="range" id="bidWindow" value="50">
+              <input type="range" id="bidWindow" value="10000" min="1" max="20160">
             </div>
           </div>
           <div class="form-group">
