change make offers to show descriptions

--- a/www/kerbit/imports/ui/pages/makeOffers.html
+++ b/www/kerbit/imports/ui/pages/makeOffers.html
@@ -20,7 +20,7 @@
             <p class="h3 text">Current Requests</p>
             <div class="row" style="margin-left: 15px">
               {{#each requests}}
-                <input type="radio" name="requestId" value={{_id}}> {{title}}<br>
+                <input type="radio" name="requestId" value={{_id}}> {{_id}}<br>
               {{/each}}
             </div>
           </div>
