--- a/www/kerbit/imports/ui/pages/makeOffers.html
+++ b/www/kerbit/imports/ui/pages/makeOffers.html
@@ -19,8 +19,12 @@
           <div class="col-md-6">
             <p class="h3 text">Current Requests</p>
             <div class="row" style="margin-left: 15px">
-              {{#each request in requests}}
-                <input type="radio" name="requestId" value={{request._id}}> {{request.description}}<br>
+              {{#each requests}}
+                <input type="radio" name="requestId" value={{_id}}>
+                Request: {{description}} <br>
+                Created on {{formatDate date}}. <br>
+                Pick up {{formatDescription description}} <br>
+                at postcode: {{formatPostcode postcode}} <br><br>
               {{/each}}
             </div>
           </div>
