Fix date not showing up

--- a/www/kerbit/imports/ui/pages/myRequests.html
+++ b/www/kerbit/imports/ui/pages/myRequests.html
@@ -6,7 +6,7 @@
         {{#each requests}}
         <li class="list-group-item">
           Request: {{description}} <br>
-          Created on {{formatDate date}}. <br>
+          Created on {{formatDate createdAt}}. <br>
           Pick up {{formatDescription description}} <br>
           at postcode: {{formatPostcode postcode}} <br>
           {{#each offers _id}}
