Fixed routing and removed API isDriver access

--- a/www/kerbit/imports/ui/pages/makeOffers.html
+++ b/www/kerbit/imports/ui/pages/makeOffers.html
@@ -38,6 +38,11 @@
         </div>
       </div>
     </div>
+      <!--<div class="row">-->
+          <!--<div class="col-md-12">-->
+              <!--{{> quickForm collection="Offers" id="insertOffer" type="insert" class="test-offer-form"}}-->
+          <!--</div>-->
+      <!--</div>-->
   </div>
 
 </template>
