Move authorization to the template level and implement redirect for the home link, but something is broken when displaying restricted pages

--- a/www/kerbit/imports/ui/pages/makeOffers.html
+++ b/www/kerbit/imports/ui/pages/makeOffers.html
@@ -1,4 +1,9 @@
 <template name="MakeOffers">
+  {{#onlyDriver}}
+    {{>MakeOffersHelper}}
+  {{/onlyDriver}}
+</template>
+<template name="MakeOffersHelper">
 
   <div class="container">
     <div class="jumbotron">
