--- a/www/kerbit/imports/ui/pages/requestPickup.html
+++ b/www/kerbit/imports/ui/pages/requestPickup.html
@@ -24,7 +24,8 @@
           <div class="form-group">
             <label for="image" class="col-md-2 control-label">Image</label>
             <div class="col-md-10">
-              <input type="file" id="image" accept="images/*">
+              <input type="file" id="file" accept="images/*">
+              <img id="image" src="#" alt="your image" class="img-thumbnail">
             </div>
           </div>
           <div class="form-group">
