Fix authentication issues and redirects, plus autogenerate the sidebar links

--- a/www/kerbit/imports/ui/pages/clientHistory.html
+++ b/www/kerbit/imports/ui/pages/clientHistory.html
@@ -1,10 +1,10 @@
 <template name="ClientHistory">
   {{#OnlyConsumer}}
-    {{> ClientHistoryHelper}}
+    {{>ClientHistoryHelper }}
   {{/OnlyConsumer}}
 </template>
 
 <template name="ClientHistoryHelper">
-    Client History goes here !
+  <h3> Client History goes here ! </h3>
 </template>
 
