--- a/www/kerbit/imports/ui/pages/driverHistory.html
+++ b/www/kerbit/imports/ui/pages/driverHistory.html
@@ -1,9 +1,9 @@
 <template name="DriverHistory">
-  {{#onlyDriver}}
+  {{#OnlyDriver}}
     {{>DriverHistoryHelper}}
-  {{/onlyDriver}}
+  {{/OnlyDriver}}
 </template>
 
 <template name="DriverHistoryHelper">
-    Driver History goes here !
+  <div class="text-center h1"> My Recent Jobs </div>
 </template>
