--- a/www/kerbit/imports/ui/pages/makeOffers.html
+++ b/www/kerbit/imports/ui/pages/makeOffers.html
@@ -1,8 +1,9 @@
 <template name="MakeOffers">
-  {{#onlyDriver}}
+  {{#OnlyDriver}}
     {{>MakeOffersHelper}}
-  {{/onlyDriver}}
+  {{/OnlyDriver}}
 </template>
+
 <template name="MakeOffersHelper">
 
   <div class="container">
