--- a/www/kerbit/imports/ui/pages/myOffers.html
+++ b/www/kerbit/imports/ui/pages/myOffers.html
@@ -1,7 +1,7 @@
 <template name="MyOffers">
-  {{#onlyDriver}}
+  {{#OnlyDriver}}
     {{>MyOffersHelper}}
-  {{/onlyDriver}}
+  {{/OnlyDriver}}
 </template>
 
 <template name="MyOffersHelper">
