--- a/www/kerbit/imports/ui/pages/myRequests.html
+++ b/www/kerbit/imports/ui/pages/myRequests.html
@@ -1,7 +1,7 @@
 <template name="MyRequests">
-  {{#onlyConsumer}}
+  {{#OnlyConsumer}}
     {{>MyRequestsHelper}}
-  {{/onlyConsumer}}
+  {{/OnlyConsumer}}
 </template>
 
 <template name="MyRequestsHelper">
