--- a/www/kerbit/imports/ui/pages/requestPickup.html
+++ b/www/kerbit/imports/ui/pages/requestPickup.html
@@ -1,7 +1,7 @@
 <template name="RequestPickup">
-  {{#onlyConsumer}}
+  {{#OnlyConsumer}}
     {{>RequestPickupHelper}}
-  {{/onlyConsumer}}
+  {{/OnlyConsumer}}
 </template>
 
 <template name="RequestPickupHelper">
