--- a/www/kerbit/imports/ui/pages/makeOffers.html
+++ b/www/kerbit/imports/ui/pages/makeOffers.html
@@ -27,7 +27,7 @@
                 at postcode: {{formatPostcode postcode}} <br><br>
                 {{#each images imageId}}
                   <div>
-                    <a href="{{this.url}}" target="_blank"><img src="{{this.url store='images' uploading='/van.ico' storing='/van.ico'}}" alt="" class="thumbnail" /></a>
+                    <a href="{{this.url}}" target="_blank"><img src="{{this.url store='images' uploading='/van.ico' storing='/van.ico'}}" alt="" class="img-thumbnail" /></a>
                   </div>
                 {{/each}}
               {{/each}}
