--- a/www/kerbit/imports/ui/pages/myRequests.html
+++ b/www/kerbit/imports/ui/pages/myRequests.html
@@ -11,7 +11,7 @@
           at postcode: {{formatPostcode postcode}} <br>
           {{#each images imageId}}
             <div>
-              <a href="{{this.url}}" target="_blank"><img src="{{this.url store='images' uploading='/van.ico' storing='/van.ico'}}" alt="" class="thumbnail" /></a>
+              <a href="{{this.url}}" target="_blank"><img src="{{this.url store='images' uploading='/van.ico' storing='/van.ico'}}" alt="" class="img-thumbnail" /></a>
             </div>
           {{/each}}
           {{#each offers _id}}
