--- a/www/kerbit/imports/ui/pages/makeOffers.html
+++ b/www/kerbit/imports/ui/pages/makeOffers.html
@@ -11,7 +11,9 @@
       <div class="row">
         <div class="col-md-6">
           <p class="h1 text-center">Map</p>
-          {{> map}}
+          <div id="map-container">
+            {{> map}}
+          </div>
         </div>
         <div class="col-md-6">
           <p class="h1 text-center">Make Offer</p>
