--- a/www/kerbit/imports/ui/pages/requestPickup.html
+++ b/www/kerbit/imports/ui/pages/requestPickup.html
@@ -10,7 +10,9 @@
     <div class="row">
       <div class="col-md-6">
         <p class="h1 text-center">Map</p>
-        {{> map}}
+        <div id="map-container" class="request-pickup">
+          {{> map}}
+        </div>
       </div>
       <div class="col-md-6">
         <p class="h1 text-center">Address</p>
