Add transaction history view

--- a/www/kerbit/imports/ui/pages/clientHistory.html
+++ b/www/kerbit/imports/ui/pages/clientHistory.html
@@ -5,6 +5,17 @@
 </template>
 
 <template name="ClientHistoryHelper">
-  <h3> Client History goes here ! </h3>
+  <div class="text-center h1"> My Recent Transactions </div>
+    <div class="container">
+      <div class="row">
+        <ul class="list-group">
+          {{#each transactions}}
+            <li class ="list-group-item">
+              {{>Transaction}}
+            </li>
+          {{/each}}
+        </ul>
+      </div>
+    </div>
 </template>
 
