--- a/www/kerbit/imports/ui/pages/driverHistory.html
+++ b/www/kerbit/imports/ui/pages/driverHistory.html
@@ -6,4 +6,15 @@
 
 <template name="DriverHistoryHelper">
   <div class="text-center h1"> My Recent Jobs </div>
+    <div class="container">
+      <div class="row">
+        <ul class="list-group">
+          {{#each transactions}}
+            <li class ="list-group-item">
+              {{>Transaction}}
+            </li>
+          {{/each}}
+        </ul>
+      </div>
+    </div>
 </template>
