--- a/www/kerbit/imports/ui/pages/clientHistory.html
+++ b/www/kerbit/imports/ui/pages/clientHistory.html
@@ -6,5 +6,14 @@
 
 <template name="ClientHistoryHelper">
   <h3> Client History goes here ! </h3>
+    {{> starsRating id='rating' mutable=true}}
+    <button class="btn btn-default" onclick="getRating()">Button</button>
+
+    <script>
+        function getRating() {
+            var rating = $('#rating').data('userrating');
+            Meteor.call('rateDriver', Meteor.userId(), rating);
+        }
+    </script>
 </template>
 
