[PB] Style 404 page

--- a/www/kerbit/imports/ui/pages/notFound.html
+++ b/www/kerbit/imports/ui/pages/notFound.html
@@ -1,4 +1,15 @@
 <template name="NotFound">
-  <h3>It appears the page you are looking for does not exist, I you wish you can
-    access our <a href="/">home page</a> if you wish </h3>
+    <div class="container">
+        <div class="jumbotron">
+            <h1 class="text-center">404</h1>
+            <h2 class="text-center">Page not found</h2>
+            <hr>
+            <p class="text-center text-muted">It appears the page you're looking for doesn't exist. Don't panic!
+            Click the <i class="fa fa-arrow-left fa-fw"></i> in your browser window to go back to where you were before,
+            or click this nice green button:</p>
+            <div class="text-center">
+                <a href="/" class="btn btn-lg btn-success"><i class="fa fa-home fa-fw"></i> Take me home</a>
+            </div>
+        </div>
+    </div>
 </template>
