--- a/www/kerbit/imports/ui/pages/register.html
+++ b/www/kerbit/imports/ui/pages/register.html
@@ -2,7 +2,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="vcenter text-center col-md-4 col-md-offset-4">
+            <div class="text-center col-md-6 col-md-offset-3">
                 {{> atForm state = 'signUp'}}
             </div>
         </div>
